crates/context-macro/tests/constraints/seeds_keys.fail.stderr
error: Cannot specified keys and seeds at the same time.
  --> tests/constraints/seeds_keys.fail.rs:27:9
   |
27 |     pub counter: Mut<Account<Counter>>,
   |         ^^^^^^^
